[package]
name = "chainseeker-syncer"
version = "0.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
zmq = "0.9"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["full"] }
rocksdb = "0.16"
bitcoin = "0.26"
bitcoin_hashes = "0.9"
bitcoin-rest = "0.0.5"
