[package]
name = "chainseeker-server"
version = "0.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.7", features = ["rayon"] }
num-format = "0.4"
hex = "0.4"
num_cpus = "1.13"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
rayon = "1.5"
zmq = "0.9"
futures-util = "0.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.14"
hyper = { version = "0.14", features = ["full"] }
routerify = "2.1"
rocksdb = "0.16"
bitcoin = "0.26"
bitcoin-rest = { version = "0.0.11", default-features = false }
bitcoincore-rpc = "0.13"

[dev-dependencies]
criterion = { version = "0.3", features = [] }

[[bench]]
name = "db"
path = "src/benches/db.rs"
harness = false
