[package]
name = "chainseeker"
version = "3.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
license = "MIT"
description = "chainseeker.info client side library"
repository = "https://github.com/chainseeker/chainseeker-server"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["cryptocurrency", "blockexplorer", "bitcoin", "monacoin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.6", features = ["rt", "macros"] }
hex = "0.4"
bitcoin = "0.26"
