[package]
name = "chainseeker-server"
version = "3.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
license = "MIT"
description = "chainseeker.info server-side implementation"
repository = "https://github.com/chainseeker/chainseeker-server"
categories = ["cryptography::cryptocurrencies", "web-programming::http-server", "web-programming::websocket"]
keywords = ["cryptocurrency", "blockexplorer", "bitcoin", "monacoin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.7", features = ["rayon"] }
num-format = "0.4"
hex = "0.4"
num_cpus = "1.13"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
zmq = "0.9"
futures-util = "0.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.14"
hyper = { version = "0.14", features = ["full"] }
routerify = "2.1"
rocksdb = "0.16"
bitcoin-rest = { version = "0.1", default-features = false }
bitcoincore-rpc = "0.13"
chainseeker = "3.0.3"

[dev-dependencies]
criterion = { version = "0.3", features = [] }
jsonrpc-http-server = "17.1"
chainseeker = { version = "3.0.3", features = ["bitcoin"] }

[[bench]]
name = "db"
path = "src/benches/db.rs"
harness = false
